# courseprojectonfundamentalinfomartics

./: CMakeLists.txt  Пояснительная записка.docx
src/: main.cpp
src/collections/allocators/: memory.h
src/data_types/: request_object.h  shared_object.h
src/extensions/: serializable.h
src/loggers/ostream_logger/: logger_builder.h
src/loggers/server_logger/: server_logger.h
src/processors/log_server/: log_server_processor.h
src_client/: main.cpp
src_client/connection/: memory_connection.h
src_client/data_types/: shared_object.h
src_client/loggers/: logger.h
src_client/processors/: processor.h
src_logger/: main.cpp
src_logger/collections/BPlusTree/: SortedArray.h
src_logger/collections/allocators/: default_memory.h  memory.cpp
src_logger/data_types/: contest_info.h
src_logger/loggers/ostream_logger/: logger_builder_concrete.h  logger_concrete.h
src_logger/processors/client/: client_processor.h
src_logger/processors/server/: server_processor.h
src_logger/processors/storage/: storage_processor.h
src_server/: main.cpp
src_server/collections/: Map.h
src_server/connection/: connection.h  multiple_request.h
src_server/extensions/: hashable.h
src_server/loggers/ostream_logger/: logger_builder.cpp  logger_builder_concrete.cpp  logger_concrete.cpp
src_server/processors/server/: server_processor.h
src_storage/: main.cpp
src_storage/collections/BPlusTree/: BPlusTreeMap.h
src_storage/processors/storage/: storage_processor.h
src_storage/string_pool/: string_pool.h
